# vortex

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  client.cpp
applications/: CMakeLists.txt
benchmark/: run_encoder_example.cpp
benchmark/perf_data/: balanced_ann.py  balanced_format_gist.py  faiss_knn.py  format_gist_balanced.py
benchmark/pipeline_client/: full_pipeline_client.py  micro_ppl2_client.py  monoClient.py  no_cache_stepABclient.py  pipeline2_serialize_utils.py  pipeline_client  ppl2_client.py  preprocess.py  stepABclient.py  web_monoClient.py
benchmark/setup/: build_hnsw_index.cpp  perf_test_setup.py  setup
cfg/: dfgs.json.tmp  dfgs_separate_doc_retrieve.json.tmp  layout.json.tmp  udl_dlls.cfg.tmp
cfg/n0/: derecho.cfg
cfg/n1/: derecho.cfg
cfg/n10/: derecho.cfg
cfg/n11/: derecho.cfg
cfg/n12/: derecho.cfg
cfg/n13/: derecho.cfg
cfg/n14/: derecho.cfg
cfg/n15/: derecho.cfg
cfg/n16/: derecho.cfg
cfg/n17/: derecho.cfg
cfg/n18/: derecho.cfg
cfg/n2/: derecho.cfg
cfg/n3/: derecho.cfg
cfg/n4/: derecho.cfg
cfg/n5/: derecho.cfg
cfg/n6/: derecho.cfg
cfg/n7/: derecho.cfg
cfg/n8/: derecho.cfg
cfg/n9/: derecho.cfg
data/: CMakeLists.txt  README.md  format_gist.py
vortex_udls/: CMakeLists.txt  aggregate_udl.cpp  aggregate_udl.hpp  centroids_search_udl.cpp  clusters_search_udl.cpp  clusters_search_udl.hpp  grouped_embeddings_for_search.hpp  oob_receiver_udl.cpp  oob_sender_udl.cpp  serialize_utils.cpp  serialize_utils.hpp
vortex_udls/python/python_udls/: aggregate_udl.py  doc_generate_udl.py  doc_udl.py  encode_search_doc_udl.py  encode_udl.py  lang_det_udl.py  mono_flmr.py  monolithic_udl.py  no_cache_stepa_udl.py  no_cache_stepb_udl.py  no_cache_stepd_udl.py  pipeline2_mon_udl.py  pipeline2_mono_udl.py  pipeline2_serialize_utils.py  python_udls  pyudl_serialize_utils.py  qa_check_udl.py  search_doc_udl.py  search_udl.py  speech_to_text_udl.py  stepa_udl.py  stepb_udl.py  test_client.py  test_server.py  text_check_udl.py  workers_util.py
